# md_dataset

./: .gitignore  .trivyignore  CITATION.cff  Dockerfile  NOTICE  README.md  base.Dockerfile  py.Dockerfile  pyproject.toml  r.Dockerfile  r.base.Dockerfile
.buildkite/: pipeline.yaml  pipeline.yml
docs/: Makefile  conf.py  index.rst  make.bat
scripts/: audit  build-push  diag-prefect  ecr_repository_policy.json  ensure-uv  lint  lint-correct  lint-format  local-docker-images  scan-image-trivy  tag  test  trivy-check-expiry  trivy-scan-image
src/: deploy.py
src/md_data_set/: __init__.py  process.py
src/md_data_set/models/: types.py
src/md_dataset/: __init__.py  dataset_job.py  dataset_job_api.py  deploy.py  deploy_dataset_job.py  deploy_prefect.py  deploy_to_dataset_service.py  file_manager.py  process.py  translate_payload.py
src/md_dataset/models/: dataset.py  factory.py  r.py  types.py
src/md_dataset/storage/: __init__.py  factory.py  file_manager.py  s3.py
tests/: conftest.py  func.py  harness.py  run_r.ipynb  run_r.py  test_dataset_job.py  test_dataset_job_api.py  test_dose_response_compare_dataset.py  test_file_manager.py  test_harness.py  test_mofa_dataset.py  test_process.py  test_process.r  test_process_r.py
tests/data/abcd1234/: Protein_Intensity.parquet  Protein_Metadata.parquet
tests/tools/: harness.py  test_harness.py
